# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  06 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Use ${DEFAULTLEVEL} if ${SOFTLEVEL} is boot, shutdown, reboot or single
    in add_suffix.

    Sync style changes in functions.sh

    Critical services now load a suffixed config and fail gracefully.

  05 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    iproute deletes addresses again, fixes #117799.

    dhclient now supports dhclient-enter-hooks, #117763.

* baselayout-1.12.0_pre13 (04 Jan 2006)

  03 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    net scripts now work with bash-3.1-r2, #116352.

  02 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Interfaces can be dynamically added to bridges again, #117406.
    Updated copyright to 2006.

  27 Dec 2005; Mike Frysinger <vapier@gentoo.org>:

    Startup volume related stuff (lvm/raid/etc...) in rc instead of
    init.d/checkfs (lvm/raid/etc...) #50711.

  25 Dec 2005; Mike Frysinger <vapier@gentoo.org>:

    Clean up and display the ${TMPFILE2}.err error file in modules-update
    where appropriate #116745 by Daniele Gaffuri.

  21 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    Add new variable RC_DOWN_INTERFACE and documentation so that interfaces
    are kept up for Wake On LAN support, #113880.

* baselayout-1.12.0_pre12 (20 Dec 2005)

  20 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    Ensure that tty has keyboard and stty reports icanon before enabling
    interactive rc, #112161.

  15 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    When setting ad-hoc or master modes, set the mode before anything else,
    #115664 thanks to Oldrich Jedlicka.

  14 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    Add great big warning in documentation advising people not to use the
    IPv6 examples if they don't have IPv6 enabled in their kernel, #115396.

  09 Dec 2005; Roy Marples <uberlord@gentoo.org>:
