@@ -1,6 +1,10 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  07 Jan 2006; Roy Marples <uberlord@gentoo.org>:
+
+    Save a few CPU cycles by storing add_suffix in variable.
+
   06 Jan 2006; Roy Marples <uberlord@gentoo.org>:
 
     Use ${DEFAULTLEVEL} if ${SOFTLEVEL} is boot, shutdown, reboot or single
